# HyperLSTM

./: .gitignore  0.4.0  1918.csv  README.md  checkpointer.py  continue training.txt  correlations.py  hockey_train.py  main.py  plot.py  plot2.py  pyproject.toml  run  test.py  train.py  train_hyperLSTM.py  vis  vis_data.py  white_theme.py
custom_datasets/: __init__.py  glue.py
data/: fix_team_ID.py  main.py  standardize_data.py  team_names.json  utils.py
data/seasons/: 1919.csv  1920.csv  1921.csv  1922.csv  1923.csv  1924.csv  1925.csv  1926.csv  1927.csv  1928.csv  1929.csv  1930.csv  1931.csv  1932.csv  1933.csv  1934.csv  1935.csv  1936.csv  1937.csv  1938.csv  1939.csv  1940.csv  1941.csv  1942.csv  1943.csv  1944.csv  1945.csv  1946.csv  1947.csv  1948.csv  1949.csv  1950.csv  1951.csv  1952.csv  1953.csv  1954.csv  1955.csv  1956.csv  1957.csv  1958.csv  (+63 more)
datasets/: __init__.py  hockey.py  hockey_for_test.py  hockey_minimal.py  hockey_pca.py  logic.py  parity.py
models/: __init__.py  feed_forward_baseline.py  glue_transformer.py  hyperLSTM.py  hyperlstm.py  hyperlstm_wrapper.py  litenc.py  lstm.py  lstm_wrapper.py  mnist.py  sam.py  sequence_wrapper.py
models/hyperlstm/: build_vocabulary.py  hyperlstm.py  input_pipeline.py  input_pipeline_test.py  models_test.py  train.py  train_test.py
tests/: test_hyperlstm.py
