[tool.poetry]
name = "hyperlstm"
version = "0.1.0"
description = ""
authors = ["Neil Franks <neilmichaelfranks@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
requests = "^2.27.1"
beautifulsoup4 = "^4.11.1"
lxml = "^4.8.0"
pandas = "^1.4.2"
absl-py = "^1.0.0"
ml-collections = "^0.1.1"
tensorflow = "^2.8.0"
tensorflow-datasets = "^4.5.2"

[tool.poetry.dev-dependencies]
pytest = "==6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
